servicemeshoperator3/gateway.yaml
# ------------------------------------------------------------
# 1. Gateway (Implementación con Istio)
# ------------------------------------------------------------
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: neuralbank-gateway
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app.kubernetes.io/name: neuralbank-gateway
    connectivity-link.redhat.com/gateway: "neuralbank"
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All

      # tls:
      #   mode: Terminate
      #   certificateRefs:
      #     - kind: Secret
      #       name: neuralbank-tls-secret
